rename value-panel classes; remove <p> around text.  set vertical-align to fix issue

--- a/server/static/scss/landpage.scss
+++ b/server/static/scss/landpage.scss
@@ -56,9 +56,9 @@
 }
 
 
-.values 		{	display: inline-block;	padding: 10px 20px;	}
-.panel-title	{	position: static;		text-align: center; }
-.panel-value	{ }
+.value	 		{	display: inline-block;	padding: 10px 20px;		vertical-align: middle;	}
+.value-title	{	position: static;		text-align: center; }
+.value-panel	{ }
 
 
 
@@ -100,8 +100,8 @@
 
 
 @media (min-width: 768px) {
-	.values			{ width: 33%;	}
-	.panel-value	{ height: 80px;	}
+	.value			{ width: 33%;	}
+	.value-panel	{ height: 80px;	}
 	#press-row a:last-child {	display: inline-block; 	}
 }
 
